<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.yuan7.tomcat.ui.login.fragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_26"
        android:orientation="vertical"
        android:padding="45dp">

        <com.yuan7.tomcat.widget.roundImageView.RoundedImageView
            android:id="@+id/iv_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            android:src="@mipmap/icon"
            app:riv_oval="true" />

        <TextView
            android:id="@+id/tv_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/login_title"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_userName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/shape_edit_bg"
            android:drawableLeft="@drawable/ic_back"
            android:hint="@string/login_userName"
            android:textColorHint="@color/colorAccent"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/shape_edit_bg"
            android:drawableLeft="@drawable/ic_back"
            android:hint="@string/login_password"
            android:textColorHint="@color/colorAccent"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_26"
            android:text="@string/login_getPassword"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:layout_marginTop="@dimen/dp_26"
            android:background="@drawable/shape_btn_bg1"
            android:text="@string/login_login"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_flyLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:layout_marginTop="@dimen/dp_26"
            android:background="@drawable/shape_btn_bg2"
            android:text="@string/login_flyLogin"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_rightRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="@dimen/dp_26"
        android:text="@string/login_register"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/sp_16" />

</FrameLayout>
