<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context="com.yuan7.tomcat.ui.menu.settings.AppSettingsFragment">

    <FrameLayout
        android:id="@+id/fl_item_font"
        android:background="@drawable/ripple_app_settings_item"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:layout_height="46dp">

        <TextView
            android:text="@string/app_settings_font"
            android:layout_gravity="center_vertical|start"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_font"
            android:textColor="@color/colorPrimaryDark"
            android:text="大"
            android:layout_gravity="center_vertical|end"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <FrameLayout
        android:id="@+id/fl_item_push"
        android:background="@drawable/ripple_app_settings_item"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:layout_height="46dp">

        <TextView
            android:text="@string/app_settings_push"
            android:layout_gravity="center_vertical|start"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Switch
            android:clickable="false"
            android:id="@+id/switch_push"
            android:layout_gravity="center_vertical|end"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <FrameLayout
        android:id="@+id/fl_item_message"
        android:background="@drawable/ripple_app_settings_item"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:layout_height="46dp">

        <TextView
            android:text="@string/app_settings_message"
            android:layout_gravity="center_vertical|start"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Switch
            android:clickable="false"
            android:id="@+id/switch_message"
            android:layout_gravity="center_vertical|end"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <FrameLayout
        android:id="@+id/fl_item_wifi"
        android:background="@drawable/ripple_app_settings_item"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:layout_height="46dp">

        <TextView
            android:text="@string/app_settings_wifi"
            android:layout_gravity="center_vertical|start"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Switch
            android:clickable="false"
            android:id="@+id/switch_wifi"
            android:layout_gravity="center_vertical|end"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <FrameLayout
        android:id="@+id/fl_item_update"
        android:background="@drawable/ripple_app_settings_item"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:layout_height="46dp">

        <TextView
            android:text="@string/app_settings_update"
            android:layout_gravity="center_vertical|start"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!--<Switch-->
            <!--android:id="@+id/switch_update"-->
            <!--android:layout_weight="2"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content" />-->

    </FrameLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="2dp" />


</LinearLayout>
