<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_nav_header" />

    <LinearLayout
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C2C2CE"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/item_friend"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">


            <TextView
                android:id="@+id/tv_friend"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:drawableLeft="@drawable/ic_group_gray_24dp"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_16"
                android:text="@string/menu_item_friend"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_friendNum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="center"
                android:paddingRight="@dimen/dp_16"
                android:text="(734)" />

        </FrameLayout>


        <FrameLayout
            android:id="@+id/item_post"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">


            <TextView
                android:id="@+id/tv_post"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:drawableLeft="@drawable/ic_border_gray_24dp"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_16"
                android:text="@string/menu_item_post"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_postNum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="center"
                android:paddingRight="@dimen/dp_16"
                android:text="(734)" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/item_message"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:drawableLeft="@drawable/ic_chat_gray_24dp"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_16"
                android:text="@string/menu_item_message"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_messageNum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="center"
                android:paddingRight="@dimen/dp_16"
                android:text="(734)" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/item_shop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">


            <TextView
                android:id="@+id/tv_shop"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:drawableLeft="@drawable/ic_shopping_gray_24dp"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_16"
                android:text="@string/menu_item_shop"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_shopNum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="center"
                android:paddingRight="@dimen/dp_16"
                android:text="(734)" />

        </FrameLayout>


        <FrameLayout
            android:id="@+id/item_userSettings"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">


            <TextView
                android:id="@+id/tv_userSettings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:drawableLeft="@drawable/ic_person_gray_24dp"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_16"
                android:text="@string/menu_item_userSettings"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/item_appSettings"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">


            <TextView
                android:id="@+id/tv_appSettings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:drawableLeft="@drawable/ic_settings_gray_24dp"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_16"
                android:text="@string/menu_item_appSettings"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>